# travelassistant

./: .dockerignore  .env.example  .gitignore  README.md  package-lock.json  package.json  render.yaml  script.md
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_auth_account_chat_foundation.py  0002_content_media.py  0003_rag_ingestion.py  0004_generic_rag_sources.py  0005_chat_itinerary_streaming.py  0006_voice_jobs.py  0007_admin_cms_bi.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: __init__.py
apps/api/app/api/v1/routes/: account.py  admin.py  auth.py  chat.py  (+5 more)
apps/api/app/core/: errors.py  rate_limit.py  rbac.py  security.py  settings.py
apps/api/app/dataops/: __init__.py  import_ivivu.py  reindex_rag.py
apps/api/app/db/: __init__.py  create_admin.py  seed.py  session.py
apps/api/app/models/: __init__.py  analytics.py  auth.py  chat.py  content.py  rag.py  voice.py
apps/api/app/schemas/: account.py  admin.py  auth.py  chat.py  content.py  dataops.py  itinerary.py  voice.py
apps/api/app/services/: analytics.py  audit.py  chunking.py  embeddings.py  ingestion.py  itinerary_generation.py  ivivu_import.py  llm.py  queue.py  rag_answer.py  retrieval.py  storage.py  vector_store.py  vision.py  voice.py
apps/api/app/workers/: embedding.py
apps/api/tests/: test_admin_cms_bi.py  test_auth_account.py  test_chat_itinerary_streaming.py  test_content_media.py  test_health_contract.py  test_rag_ingestion.py  test_voice_image_pipeline.py
(+44 files in other folders)
