[project]
name = "travelassistant-api"
version = "0.1.0"
description = "FastAPI backend for TravelAssistant."
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.128.0",
  "openai>=2.11.0",
  "psycopg[binary]>=3.2.3",
  "pwdlib[argon2]>=0.2.1",
  "pydantic-settings>=2.7.1",
  "pyjwt>=2.10.1",
  "python-multipart>=0.0.20",
  "qdrant-client>=1.12.1,<1.13.0",
  "redis>=5.2.1",
  "rq>=2.0.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "httpx>=0.28.1",
  "ruff>=0.9.2",
  "mypy>=1.14.1"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
